test/libsolidity/syntaxTests/storageLayoutSpecifier/interface.sol
interface I layout at 42 { }
// ----
// ParserError 2314: (12-18): Expected '{' but got identifier
